# agentd

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml
docs/: README.md  TODO.md  spec.md  spec.zh.md
docs/design/: event-triggers.md
scaffold/: AGENTS.md  config.yaml  env.example
scaffold/skills/agentd/: SKILL.md
scaffold/skills/supervisor/: SKILL.md
src/agentd/: __init__.py  __main__.py  config.py  protocol.py
src/agentd/_data/: agents.md  config.example.yaml
src/agentd/_data/skills/agentd/: SKILL.md
src/agentd/_data/skills/supervisor/: SKILL.md
src/agentd/_data/skills/telegram/: SKILL.md
src/agentd/api/: __init__.py  http_gateway.py  methods.py  server.py
src/agentd/channels/: __init__.py  cli.py  lib.py  supervisor.py  telegram.py
src/agentd/cli/: __init__.py  client.py
src/agentd/runtime/: __init__.py  base.py  runner.py
src/agentd/runtime/backends/: __init__.py  claude.py  codex.py  pi.py
src/agentd/scheduler/: __init__.py  cron.py  event_bus.py  scheduler.py
src/agentd/store/: db.py  schema.sql  store.py
tests/: test_api_server.py  test_backends.py  test_channels.py  test_config.py  test_cron.py  test_cron_eventbus.py  test_protocol.py  test_public_error_codes.py  test_runtime_runner.py  test_scheduler.py  test_store.py  test_telegram_channel.py
